<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Titles -->
    <string name="app_name">CaughtUp</string>
    <string name="news_feed_title">News Feed</string>
    <string name="search_title">Search</string>
    <string name="edit_profile_title">Edit Your Profile</string>
    <string name="change_password_title">Change Your Password</string>

    <!-- Alt-text for images -->
    <string name="search_icon">Search Icon</string>
    <string name="profile_picture_description">Public profile picture for user.</string>
    <string name="share_article_tile_view_description">Share article</string>
    <string name="thumbnail_article_tile_view_description">Article thumbnail</string>

    <!-- Text for TextView, EditText, and Button elements -->
    <string name="change_password">Change Password</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="edit_photo_text">Edit Photo</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="follow_me_button_text">Follow Me!</string>
    <string name="unfollow_button_text">Unfollow</string>
    <string name="base_search_results_text">Search results for</string>
    <string name="edit_profile_location_hint">Location</string>
    <string name="edit_profile_fullname_hint">Full Name</string>
    <string name="edit_profile_email_hint">Email</string>
    <string name="edit_profile_age_hint">Age</string>
    <string name="edit_profile_gender_hint">Gender</string>
    <string name="edit_profile_about_me_hint">About me</string>
    <string name="save_changes">Save Changes</string>
    <string name="news_feed_no_articles_text">You\'re not currently following anyone! You should go to the search page and find someone to follow.</string>

    <!-- Data for populating Gender field -->
    <string-array name="gender_array">
        <item>none</item>
        <item>male</item>
        <item>female</item>
    </string-array>

    <!-- Strings for test data -->
    <string name="test_techcrunch_url">http://techcrunch.com/2016/04/04/saleforce-acquires-metamind/</string>
    <string name="test_techcrunch_date">4/4/2016</string>
    <string name="test_techcrunch_title">Salesforce Acquires MetaMind</string>
    <string name="test_techcrunch_description">MetaMind, a Palo Alto-based AI startup founded in July 2014, is being acquired by Salesforce.</string>
    <string name="test_bbc_url">http://www.bbc.com/news/world-us-canada-35964791</string>
    <string name="test_bbc_date">4/4/2016</string>
    <string name="test_bbc_title">Princeton rebuffs calls to rename Woodrow Wilson school</string>
    <string name="test_bbc_description">Princeton University has rebuffed calls to remove Woodrow Wilson\'s name from its public policy school.</string>
    <string name="follow_tag">follow</string>
    <string name="unfollow_tag">unfollow</string>

    <!-- Strings for talking to the server -->
    <string name="server_connection_string" tools:ignore="TypographyDashes">http://ec2-54-153-56-178.us-west-1.compute.amazonaws.com:8080/caughtup</string>
    <string name="server_connection_string_local">http://localhost:8080/caughtup</string>

    <!-- Strings used in error messages -->
    <string name="login_server_error">Your username or password was incorrect.</string>
    <string name="register_server_error">This username is already taken.</string>
    <string name="empty_user_name">Username field must not be empty.</string>
    <string name="empty_password">Password must not be empty.</string>
    <string name="register_password_error">Both password fields must match and not be empty.</string>
    <string name="search_server_error">Could not process your search query. Please try again.</string>
    <string name="news_feed_following_server_error">Cannot get the resources you follow.</string>
    <string name="news_feed_article_server_error">Error occured while fetching articles from resources you follow.</string>
    <string name="follow_server_error">Internal server error occured while trying to follow/unfollow a resource.</string>
    <string name="change_password_server_error">Internal server error occured while trying to change your password.</string>
    <string name="wrong_old_password">Wrong old password.</string>
    <string name="user_not_found">User could not be found.</string>
    <string name="passwords_should_match">Passwords should match.</string>
    <string name="update_user_server_error">Internal server error occured while trying to update your info.</string>
    <string name="invalid_email_address">Invalid email address</string>

    <!-- Strings used for search context -->
    <string name="search_context_all_text">all</string>
    <string name="search_context_user_text">user</string>
    <string name="search_context_article_text">article</string>
    <string name="search_context_news_source_text">news source</string>
    <string name="get_user_server_error">Could not get user from server.</string>

    <!-- Strings used for messages to the user -->
    <string name="successfull_password_change">Your password has been updated.</string>

</resources>
