<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:id="@+id/change_password_old_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/change_password_old_password_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/change_password_new_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:paddingRight="5dp"/>

        <EditText
            android:id="@+id/change_password_new_password_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/change_password_confirm_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/change_password_confirm_password_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </GridLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/change_password_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/custom_button_selector"
            android:textColor="@android:color/white"
            android:text="@string/save_button_text" />

        <Button
            android:id="@+id/change_password_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/custom_button_selector"
            android:textColor="@android:color/white"
            android:text="@string/cancel_button_text" />
    </LinearLayout>

</LinearLayout>