<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/thumbnail_news_source_tile_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/thumbnail_article_tile_view_description"/>

    <ImageButton
        android:id="@+id/follow_news_source_tile_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/transparent"
        android:src="@drawable/add_icon"
        android:contentDescription="@string/share_article_tile_view_description"
        android:tag="@string/follow_tag"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/thumbnail_news_source_tile_view"
        android:layout_toLeftOf="@id/follow_news_source_tile_view">

        <TextView
            android:id="@+id/name_news_source_tile_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/description_news_source_tile_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</RelativeLayout>